[project]
name = "strands-agents-python-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.28.0",
    "strands-agents>=1.30.0",
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools>=0.2.22",
]
